README: sharpen OOM diagnosis (GC/swap spiral, not sudden death); ExitOnOOM + GC logging on unit; replay-census caveat
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>